yaml/envoy.yaml
static_resources:
  listeners:
    - name: grpc_sender
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 11010
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                add_user_agent: true
                stat_prefix: egress_http
                common_http_protocol_options:
                  idle_timeout: 0.840s
                use_remote_address: true
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: microservice_grpc
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: microservice_grpc
                http_filters:
                  - name: envoy.filters.http.grpc_http1_bridge
                    typed_config: {}
                  - name: envoy.filters.http.router
                    typed_config: {}
  clusters:
    - name: microservice_grpc
      type: logical_dns
      dns_lookup_family: V4_ONLY
      lb_policy: round_robin
      connect_timeout: 0.250s
      http_protocol_options: {}
      load_assignment:
        cluster_name: microservice_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: aion-statuskanban
                      port_value: 10000
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10001
